--- a/EMS-Frontend/angular.json
+++ b/EMS-Frontend/angular.json
@@ -1,4 +1,4 @@
-{
+  {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-spinner/animations/ball-scale-ripple-multiple.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
